# AgentEval

./: .env.example  .gitignore  Cargo.toml  README.md
bugs/: 001-truncate-panic-on-multibyte.md  002-turn-counter-jump-on-empty-messages.md
docs/: dataflow.md  diagnose-design.md  diagnose-impl.md  eval-design.md  eval-impl.md  grader-design.md  grader-impl.md  implementation.md  llm-summary-impl.md  llm-summary-plan.md  probe-design.md  probe-impl.md  proxy.md  rust-mut-reference.md  web-ui-impl.md  web-ui-plan.md
src/: config.rs  main.rs  proxy.rs
src/diagnose/: mod.rs  rules.rs  types.rs
src/eval/: mod.rs  types.rs
src/format/: openai.rs
src/grader/: judge.rs  mod.rs  prompt.rs  rules.rs  types.rs
src/probe/: agent.rs  backend.rs  mod.rs  prompt.rs  system_prompt.txt  tool.rs  tools.rs  types.rs
src/web/: mod.rs  ui.html
