[package]
name = "AgentEval"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
reqwest = { version = "0.13.4", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
serde_json = "1"
http-body = "1"
http-body-util = "0.1"
futures = "0.3"
bytes = "1"
